fix z-index

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,7 @@
   max-width: 120px;
   height: 120px;
   border:0;
+  margin:0 20px 0 0;
   border-radius: 50%;
   background-position: center;
   background-repeat: no-repeat;
